--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kalviumcommunity/s76_Weird_Indian_cultures#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
