--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.8.3",
     "framer-motion": "^12.4.7",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.7"
