--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ MYSQL_PASSWORD=1
 MYSQL_DATABASE=culturedb
 
 JWT_SECRET=oosipodu
+
+DB_URL='mongodb+srv://harishbs76:harishAsap@cluster0.ppr1j.mongodb.net/'
+CLIENT_URLS=http://localhost:5173,http://localhost:3000
