--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.3",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.553.0",
     "next": "^15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
