--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "framer-motion": "^12.4.7",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
