--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.15.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
@@ -18,8 +19,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
-    "mongoose": "^8.20.0",
     "next": "^15.1.5",
+    "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
